# 4sem

./: .gitignore
01.count_words/: Makefile  hashtable.c  hashtable.h  hashtable_iterator_decl.h  main.c  oop_tags.h  parser.h  parser_cidentifiers.c  reader.h  reader_cmd.c  reader_cmd.h  reader_file.c  reader_file.h  writer.h  writer_max_words.c  writer_max_words.h
01.count_words/include/hashtable/: hashtable_iterator_decl.h
01.count_words/include/other/: macro.h
01.count_words/include/parser/: parser.h  parser_cidentifiers.h
01.count_words/include/reader/: reader.h
01.count_words/src/hashtable/: hashtable.c
01.count_words/src/reader/: reader_cmd.c
02.game/: .gitignore  CMakeLists.txt  Makefile  README.md  cli_view.cpp  cli_view.h  console.cpp  console.h  game.cpp  game.h  main.cpp  snake_game.cpp  snake_game.h  view.cpp  view.h
02.game/include/: cli_view.h  console.h  controller.h  game.h  game_decls.h  game_driver.h  game_objects.h  human_controller.h  view.h
02.game/src/: cli_view.cpp  console.cpp  game.cpp  keyboard_callbacks_example.cpp  main.cpp  raw_input_example.cpp  temp.cpp  view.cpp
